<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:id="@+id/ll_pro_desc_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enjoy_premium"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/premium_desc"
            android:textColor="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_to_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upgrade_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ll_bottom"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_free_trail_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:textColor="@color/text_common_color_second"
                android:textSize="12sp"
                tools:text="Try it free for 3 days\n $95.9/year after trail ends" />

            <Button
                android:id="@+id/btn_purchase"
                style="@style/upgradeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:stateListAnimator="@null"
                android:text="@string/try_for_free"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_restore_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/restore_purchase"
                android:textColor="@color/text_common_color_second"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_claim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:text="@string/purchase_claim_subs_with_free_trial"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_loading_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/rv_upgrade_options"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_loading_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Loading price ..." />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/v_upgraded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tv_license_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_common_color_second"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Subscription" />

        <TextView
            android:id="@+id/tv_expire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_common_color_second"
            android:textSize="14sp"
            tools:text="Expire date : September 8, 2023" />

        <TextView
            android:id="@+id/tv_manage_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/manage_subscription"
            android:textColor="@color/primary"
            android:textSize="12sp"
            tools:text="Manage Subscription" />

    </LinearLayout>
</RelativeLayout>
